# CMake-template

./: CMakeLists.txt
modules/: func_def.cmake
src/: debug.cpp  msgmap_error.cpp  reactor.cpp
src/include/: debug.h  msgmap_error.h  reactor.h
tests/: debug_test.cpp
